# open-seed

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Harness_Engineering_Guide.md  Makefile  OpenSeed  README.md  index.html  package-lock.json  package.json  plan.md  playwright.config.js  pyproject.toml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
.playwright-cli/: page-2026-03-22T01-49-45-953Z.yml  page-2026-03-22T05-36-38-679Z.yml  page-2026-03-22T05-36-42-458Z.yml
.playwright-mcp/: page-2026-04-03T03-06-15-861Z.yml  page-2026-04-03T03-06-35-441Z.yml  page-2026-04-03T03-07-10-109Z.yml  page-2026-04-03T03-08-27-241Z.yml  page-2026-04-03T03-08-56-730Z.yml  page-2026-04-03T03-10-13-999Z.yml  page-2026-04-03T04-20-48-719Z.yml  page-2026-04-03T04-21-28-390Z.yml  page-2026-04-08T20-16-28-679Z.yml  page-2026-04-09T17-00-57-357Z.yml  page-2026-04-09T18-18-00-105Z.yml  page-2026-04-10T17-23-04-126Z.yml
TestClean1/: index.html  package.json  test.js
TestCurl3/: AGENTS.md
TestDebateFix/: index.html  package.json  tsconfig.json
TestDebateFix/src/: game.ts  main.ts  styles.css
TestDebateFix/tests/: game.test.ts
TestDebateFix2/: README.md  index.html  package-lock.json  package.json  server.js  tsconfig.json
TestDebateFix2/src/: game.js  main.ts  styles.css
TestDebateFix2/tests/: db.test.ts  game-loop.test.ts  realtime.test.ts  server.test.ts  smoke.test.js  smoke.test.ts
TestDesign/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
TestDesign/tests/: smoke.test.ts
TestDesign11/: package.json
TestDesign15/: AGENTS.md
TestDesign16/: index.html  package-lock.json  package.json  playwright.config.ts
TestDesign16/tests/: smoke.test.ts
TestDesign6/: package-lock.json
TestDesign7/: README.md  index.html
TestDesign8/: README.md  index.html
TestDesign9/: playwright.config.ts
TestFix1/: index.html  package.json
TestFix1/src/: game.js  input.js  main.js  renderer.js
TestFix1/tests/: game.test.js
TestFix2/: index.html  package.json  vite.config.js
TestFix2/src/: game.js  input.js  main.js  renderer.js
TestFix2/tests/: game.test.js
TestFix6/: index.html  package-lock.json  package.json  playwright.config.js
TestFix6/tests/: game.spec.js
app/: OpenSeed  OpenSeedApp.swift  desktop.py  icon.icns  index.html  launch-app.sh  launch.sh  main.js  package-lock.json  package.json  preload.js  server.js
autoresearch-mega-eval/: eval-500.cjs  eval-doctor.cjs  eval-settings-900.cjs  results.json
autoresearch-search-panel/: changelog.md  dashboard.html  eval-deep.cjs  eval-sidebar.cjs  eval-v3.cjs  eval.cjs  results.json  results.tsv  test-integration.cjs
autoresearch-sessions/: eval.cjs  results.json  test-integration.cjs
config/agents/: security-auditor.toml  task-distributor.toml
docs/: RESEARCH_MAP.md  SYSTEM.md
harness-bootstrap/: package-lock.json  package.json  tsconfig.json
harness-bootstrap/src/: analyzer.ts  cli.ts  generator.ts  index.ts  orchestrator.ts  types.ts
src/: cli.ts  index.ts
src/commands/: check-comments.ts  create.ts  default-pipeline.ts  doctor.ts  init-deep.ts  init.ts  live-session.ts  omo-commands.ts  resume.ts  run.ts  soak.ts  status.ts  team.ts
src/core/: config.ts  event-bus.ts  paths.ts  token-counter.ts  types.ts  utils.ts
src/mcp/: builtin-mcps.ts  client.ts  server.ts
src/memory/: memory-pipeline.ts  project-memory.ts
src/orchestration/: enforcer.ts  (+61 more)
test-debug-parse2/: AGENTS.md  result-by-step.md
tests/: agi-pipeline.test.ts  agi-systems.test.ts  anthropic-oauth-cli.test.ts  approval-resolver.test.ts  approval.test.ts  ast-grep.test.ts  browser-health.test.ts  browser-runtime.test.ts  browser-session.test.ts  checkpoint.test.ts  cli-e2e.test.ts  comment-checker.test.ts  config.test.ts  cost-tracker.test.ts  delegation.test.ts  doctor.test.ts  e2e-app-quality.test.ts  e2e-direct-claude.test.ts  e2e-direct-openai.test.ts  e2e-engine-run.test.ts  e2e-full-pipeline.test.ts  e2e-real-build-app.test.ts  e2e-real-llm.test.ts  edit-strategies.test.ts  enforcer.test.ts  external-auth.test.ts  game.spec.js  hashline.test.ts  hooks.test.ts  init-deep.test.ts  intent-gate.test.ts  mcp-server.test.ts  memory-pipeline.test.ts  microagents.test.ts  model-router.test.ts  model-variants.test.ts  openai-codex-oauth.test.ts  orchestration.test.ts  process.test.ts  project-memory.test.ts  (+17 more)
web/: AGENTS.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+163 files in other folders)
