[project]
name = "openseed"
version = "2.0.0-alpha.0"
description = "Autonomous AGI Coding Engine — zero-bug, fully autonomous"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "sueun-dev", email = "sueun@openseed.dev" }]

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/brain",
    "packages/left_hand",
    "packages/right_hand",
    "packages/qa_gate",
    "packages/sentinel",
    "packages/body",
    "packages/memory",
    "packages/cli",
]

[tool.uv.sources]
openseed-core = { workspace = true }
openseed-brain = { workspace = true }
openseed-left-hand = { workspace = true }
openseed-right-hand = { workspace = true }
openseed-qa-gate = { workspace = true }
openseed-sentinel = { workspace = true }
openseed-body = { workspace = true }
openseed-memory = { workspace = true }
openseed-cli = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/*/tests", "tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
