[project]
name = "openseed"
version = "2.0.0-alpha.0"
description = "Autonomous AGI Coding Engine — zero-bug, fully autonomous"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "sueun-dev", email = "sueun@openseed.dev" }]

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/brain",
    "packages/claude",
    "packages/codex",
    "packages/qa_gate",
    "packages/guard",
    "packages/deploy",
    "packages/memory",
    "packages/cli",
]

[tool.uv.sources]
openseed-core = { workspace = true }
openseed-brain = { workspace = true }
openseed-claude = { workspace = true }
openseed-codex = { workspace = true }
openseed-qa-gate = { workspace = true }
openseed-guard = { workspace = true }
openseed-deploy = { workspace = true }
openseed-memory = { workspace = true }
openseed-cli = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/*/tests", "tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pre-commit>=4.0",
]
