[project]
name = "openseed"
version = "2.1.0"
description = "Autonomous AGI Coding Engine — zero-bug, fully autonomous"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "sueun-dev", email = "sueun@openseed.dev" }]

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/brain",
    "packages/codex",
    "packages/qa_gate",
    "packages/guard",
    "packages/deploy",
    "packages/memory",
    "packages/cli",
]

[tool.uv.sources]
openseed-core = { workspace = true }
openseed-brain = { workspace = true }
openseed-codex = { workspace = true }
openseed-qa-gate = { workspace = true }
openseed-guard = { workspace = true }
openseed-deploy = { workspace = true }
openseed-memory = { workspace = true }
openseed-cli = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = [
    "E501",   # line length (legacy code)
    "E402",   # module level import position (intentional lazy imports)
    "N806",   # uppercase variable in function (legacy naming)
    "N802",   # function name should be lowercase (legacy)
    "N814",   # camelCase import alias (legacy)
    "SIM105", # contextlib.suppress suggestion (style preference)
    "SIM108", # ternary suggestion (readability preference)
    "SIM117", # combine with statements (readability preference)
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/*/tests", "tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pre-commit>=4.0",
    "ruff>=0.11",
    "mypy>=1.10",
]
